# auth-service

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/auth_service/: config.py  events.py  exception.py  handlers.py  helper.py  main.py  push.py  route.py  schemas.py
src/auth_service/actions/: contact.py  get_account.py  register.py  send_verify_sms.py  user_profile.py
src/auth_service/db_manager/: auth_db_manager.py  auth_db_manager_abstract.py  auto_migrate.py  db_manager.py  db_tools.py  tables.py
src/auth_service/db_manager/migrations/: env.py
src/auth_service/domain/: contact.py  send_sms.py  sms_confirmation.py  user.py  user_profile.py
src/auth_service/services/: gate_way_service.py
tests/: conftest.py  test_account.py  test_contact.py  test_send_sms.py  test_sms_confirmation.py  test_user.py  test_user_profile.py
tests/integration/: test_sms_confirmation.py
